# geochem

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 02 intro to geochem.ipynb  04 load data.ipynb  06 preprocessing.ipynb  08 TAS diagram.ipynb  10 AFM diagram.ipynb  12 Harker diagram.ipynb  14 Spider diagram.ipynb  data_example.csv  datos_ejemplo.xlsx
geochem/: __init__.py  parameters.py  preproc.py  utils.py
geochem/coda/: __init__.py  coda.py
geochem/plt/: __init__.py  harker.py  scatter.py  spider.py  tas.py  trivar.py
tests/: test_preproc.py  test_utils.py
